- Unable to read external AMF3 arrays in IExternalizable classes (Jira APPSERVER-283)
- Dealock issues with fix in Output.java (Jira APPSERVER-289)
- Bug with scope stopping and multithreading (Jira APPSERVER-290)
- SharedObjects modified flag doesn't get set to false (Jira APPSERVER-291)
- Delete/overwrite streams from clientside (Jira SN-20)

Other:
- Split demos and flash sources into their own top level directories
- Added application snapshot repository


Red5 0.7.1
------------------------
Version renamed 0.8.0 for release


Red5 0.7.0  (2008-02-23)
------------------------
New Features:
- Initial Edge/Origin clustering support for multiple Edges with a single
  Origin (Jira APPSERVER-66)	
- Added stream listeners that can get notified about received packets
- Support for server-side Javascript (Jira APPSERVER-169)
- Added new base class org.red5.server.adapter.MultiThreadedApplicationAdapter
  that allows multiple clients to connect simultaneously to the same
  application
- Added new Flash Player 9 statuses NetStream.Play.FileStructureInvalid and 
  NetStream.Play.NoSupportedTrackFound
- New Flex admin tool (Jira APPSERVER-242)

Bugfixes:
- Pause near end of buffered streams works as expected (Jira APPSERVER-199)
- Fixed potential memory leak with RTMPT connections that are not properly
  closed (Jira APPSERVER-193)
- "onMetaData" is only written to newly recorded FLV files and contains
  valid properties now
- Don't try to decode objects for closed RTMPT connections
  (Jira APPSERVER-208)
- New multi-threaded connection code fixes various timeout issues
  (Jira APPSERVER-122, Jira APPSERVER-166 and Jira APPSERVER-167)
- Always use correct classloader inside applications (Jira APPSERVER-200)
- Tomcat cannot undeploy red5 application (Jira APPSERVER-204)
- "ByteArray" objects used old data after calling "compress" or "uncompress"
  (Jira APPSERVER-211)
- "@DontSerialize" checks for properties also in inherited classes
  (Jira APPSERVER-225)