@@ -5,7 +5,7 @@ policy.port=843
 # HTTP
 http.host=0.0.0.0
 http.port=5080
-https.port=443
+https.port=8443
 
 # RTMP
 rtmp.host=0.0.0.0
